@@ -11,6 +11,7 @@
   > Several other enhancements into resolve function
   > New m3u playlist maker function
   > isPlayable parameter made available for disabling auto playable assignment based on isFolder
+  > Added an alternative mode for playing an item which does not require the isPlayable property
 - Added login support for client.request module
 - Improved ssl verification on client module
 - Improved redirection handler
@@ -19,7 +20,8 @@
 - Added ordereddict conditional into compat module
 - Added busy function to activate busydialog
 - Removed conditional and accompanying function for optional resolvers
-- Added headers parameter into spoofer function and improved it
+- Added headers parameter into spoofer function and improved it. Now capable of wrapping a url as well.
+- Re-addition of manifest_update_parameter for resolve function on live streams
 - Various other efficiency tweaks
 
 [B]1.4.1[/B]
